dev-app/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
