dev-app/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - grafana.teapot.ovh
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana-server
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
